# lab-hello-world-c

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  bintray.json
include/: greeter.h
src/: greeter.c  main.c
